--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ openai==1.54.0
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
+PyYAML==6.0.2
 rich==13.9.4
 sniffio==1.3.1
 tqdm==4.66.6
